# theBooksHome

./: .env  .gitignore  README.md  manage.py  pyproject.toml
TheBooksHome/: asgi.py  settings.py  urls.py  wsgi.py
catalog/: admin.py  models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_initial.py  0003_book_author_alter_bookinstance_status_and_more.py  0004_alter_genre_name.py  0005_author_alter_book_author.py  0006_alter_author_dod.py  0007_bookimage.py  0008_alter_bookimage_book.py
catalog/templates/: index.html
user/: admin.py  models.py
user/migrations/: 0001_initial.py  0002_delete_author.py
